--- a/AutoDiff.Test/AutoDiff.Test.csproj
+++ b/AutoDiff.Test/AutoDiff.Test.csproj
@@ -49,8 +49,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NodeTest.cs" />
+    <Compile Include="BackPropagateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GraphTest.cs" />
+    <Compile Include="PropagateTest.cs" />
+    <Compile Include="MixedTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
