--- a/AutoDiff/AutoDiff.csproj
+++ b/AutoDiff/AutoDiff.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node.cs" />
+    <Compile Include="BinaryNode.cs" />
+    <Compile Include="NodeBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
+    <Compile Include="TerminalNode.cs" />
+    <Compile Include="UnaryNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
