--- a/AutoDiff/AutoDiff.csproj
+++ b/AutoDiff/AutoDiff.csproj
@@ -43,13 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryNode.cs" />
+    <Compile Include="BinaryOp.cs" />
     <Compile Include="NodeBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
-    <Compile Include="TerminalNode.cs" />
-    <Compile Include="UnaryNode.cs" />
+    <Compile Include="Terminal.cs" />
+    <Compile Include="UnaryOp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
