--- a/AutoDiff/AutoDiff.csproj
+++ b/AutoDiff/AutoDiff.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryOp.cs" />
+    <Compile Include="F.cs" />
     <Compile Include="NodeBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
