--- a/AutoDiff.Sample/AutoDiff.Sample.csproj
+++ b/AutoDiff.Sample/AutoDiff.Sample.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DEE99750-0C06-452A-B44D-71C1139A4EFF}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>AutoDiff</RootNamespace>
-    <AssemblyName>AutoDiff</AssemblyName>
+    <ProjectGuid>{7F10209B-92C7-4B27-AF09-B3DBC79A2E3F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>AutoDiff.Sample</RootNamespace>
+    <AssemblyName>AutoDiff.Sample</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,12 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryOp.cs" />
-    <Compile Include="F.cs" />
-    <Compile Include="NodeBase.cs" />
+    <Compile Include="Entry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Terminal.cs" />
-    <Compile Include="UnaryOp.cs" />
+    <Compile Include="Sample1.cs" />
+    <Compile Include="Sample2.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutoDiff\AutoDiff.csproj">
+      <Project>{dee99750-0c06-452a-b44d-71c1139a4eff}</Project>
+      <Name>AutoDiff</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
